syntax = "proto3";
package flare;

service FlareRaft {
  rpc Vote(ByteWrapper) returns (ByteWrapper);
  rpc Snapshot(ByteWrapper) returns (ByteWrapper);
  rpc Append(ByteWrapper) returns (ByteWrapper);
}


service FlareControl {
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc GetTopology(ClusterTopologyRequest) returns (ClusterTopologyInfo);
}

message ByteWrapper {
  bytes data = 1;
  int64 shard_id = 2;
}

message JoinRequest {
  uint64 node_id = 1;
  string addr = 2;
}

message JoinResponse {
}

message ClusterTopologyRequest {
}

message ClusterTopologyInfo {
  map<uint64, string> node_addr = 1;
  map<int64, ShardTopologyInfo> shards = 2;
}

message ShardTopologyInfo {
  uint64 leader = 1;
  repeated uint64 voters = 2;
  repeated uint64 learners = 3;
}